fixed design  skills misalignment

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -408,5 +408,27 @@ color: var(--first-color);
     color: var(--text-color-light);
 }
 
+.skills_arrow{
+    margin-left: auto;
+    transition: .4s;
+}
+
+.skills_list{
+    row-gap: 1.5rem;
+    padding-left: 2.7rem;
+}
+
+.skills_titles{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: var(--mb-0-5);
+}
+
+.skills_name{
+    font-size: var(--normal-font-size);
+    font-weight: var(--font-medium);
+}
+
+
 
 
